# azure-devops-keyring

./: .gitignore  MANIFEST.in  README.md  ensure_providers.ps1  packages.config  setup.cfg  setup.py
azure_devops_keyring/: __init__.py  plugin.py  support.py
