[bdist_wheel]
universal = 1

[metadata]
name = azure-devops-keyring
version = 0.2.2
author = Microsoft Corporation
author_email = python@microsoft.com
url = https://github.com/Microsoft/azure-devops-keyring
license_file = LICENSE
description = "Automatically retrieve passwords for Azure DevOps."
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = azure_devops_keyring
include_package_data = True
zip_safe = False
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
install_requires =
    keyring
    dotnetcore2; sys_platform != 'win32'

[options.entry_points]
keyring.backends =
    AzureDevOpsKeyring = azure_devops_keyring:AzureDevOpsKeyring

